# DON-T

./: .editorconfig  .env.example  .gitattributes  .gitignore  Jenkinsfile  LICENSE  README.md  docker-compose.yml
ai/: __init__.py  xAI.py  (+3 more)
backend/AI_TMP/ai/: .gitignore  Dockerfile  __main__.py  check_xai_progress.py  finance_profile.py  manager.py  models.py  pyproject.toml  test_ai_endpoint.py  test_result.txt  xAI.py
backend/AI_TMP/ai/consumption_poc/: __init__.py  ai_insights.py  anomaly.py  config.py  loader.py  main.py  models.py  recommendation.py  reporting.py  service.py  writers.py
backend/AI_TMP/ai/crawler/: hot_deal_crawler.py  mark_outliers_postgres.py  run_to_postgres.py  run_to_sqlite.py  run_workflow.py
backend/AI_TMP/ai/data/: __init__.py  hot_deal_parser.py  price_training_rows_from_crawl.json  xai_audit_log.jsonl
backend/AI_TMP/ai/finance_engine/: __init__.py  allowlist.py  artifacts.py  inference.py  train_lgbm.py
backend/AI_TMP/ai/frontend/: index.html
backend/AI_TMP/ai/price_engine/: __init__.py  allowlist.py  artifacts.py  dataset_builder.py  feature_registry.py  features_rolling.py  inference.py  normalizer.py  schema_models.py  schema_validator.py  split.py  train_lgbm.py
backend/AI_TMP/ai/scripts/: generate_mock_raw_data.py  generate_ssafy_data.py  regenerate_reports.py  test_output.txt  test_strict_secretary.py  test_tts.py  train_finance_model.py  train_price_model.py
backend/AI_TMP/ai/src/: AGENTS.md  config.py  main.py  refactor_imports.py
backend/AI_TMP/ai/storage/: __init__.py  base.py  postgres_store.py  sqlite_store.py
(+708 files in other folders)
